--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.market-container {
+    grid-template-columns: repeat(2, minmax(0, 384px));
+}
