--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,7 @@
 .market-container {
     grid-template-columns: repeat(2, minmax(0, 384px));
 }
+
+.image-box-shadow {
+    box-shadow: 0 1px 3px 0 rgb(255 255 255 / 0.1), 0 1px 2px -1px rgb(255 255 255 / 0.1);
+}
