--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,25 @@
 @tailwind utilities;
 
 .market-container {
-    grid-template-columns: repeat(2, minmax(0, 384px));
+    grid-template-columns: repeat(1, minmax(0, 384px));
 }
 
 .image-box-shadow {
     box-shadow: 0 1px 3px 0 rgb(255 255 255 / 0.1), 0 1px 2px -1px rgb(255 255 255 / 0.1);
+}
+
+@media screen and (min-width: 480px) {
+    .market-container {
+        grid-template-columns: repeat(2, minmax(0, 384px));
+    }
+}
+
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: grid;
+    place-content: center;
 }
