--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body, #__next {
-    height: 100vh;
-}
-
 .market-container {
     grid-template-columns: repeat(1, minmax(0, 384px));
 }
@@ -17,6 +13,12 @@ body, #__next {
 @media screen and (min-width: 480px) {
     .market-container {
         grid-template-columns: repeat(2, minmax(0, 384px));
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body, #__next {
+        height: 100vh;
     }
 }
 
